# enigma-machine

./: Enigma.hs  Makefile  README.md  enigma-model.cabal  enigma.c  enigma.conf  enigma.sh  stack.yaml
app/: Main.hs
lib/: .tags  .tags.mtime  Enigma.hs
lib/Combinatorics/: Common.hs  PermutationTree.hs  UPairsTree.hs
lib/Enigma/: Aliases.hs  Constants.hs  Encryption.hs  Enigma.hs  Magazine.hs  Reflector.hs  Rotor.hs
lib/Enigma/Combinatorics/: Common.hs  PermutationTree.hs  UPairsTree.hs
lib/Enigma/Options/: ConfigFile.hs  Interact.hs  Interpret.hs  Parse.hs
lib/Options/: ConfigFile.hs  Interact.hs  Interpret.hs  Parse.hs
t/: iliad.txt.enc  unicode.txt  unicode.txt.enc
tests/: Main.hs
