cabal-version:      2.4
name:               enigma-model
version:            0.1.0.0
author:             user7723
maintainer:         jmp.loop@kittens.org

library
  exposed-modules:
    Enigma.Constants
    Enigma.Aliases
    Enigma.Rotor
    Enigma.Reflector
    Enigma.Magazine
    Enigma.Enigma
    Enigma.Encryption
    Combinatorics.Common
    Combinatorics.PermutationTree
    Combinatorics.UPairsTree
    Options.Parse
    Options.Interpret
  build-depends:
      base ^>=4.16.3.0
    , text
    , containers
    , raw-strings-qq
  hs-source-dirs:
      lib
    , lib/Enigma
    , lib/Combinatorics
  default-language: Haskell2010

executable enigma
  main-is:
    Main.hs
  hs-source-dirs:
    app
  build-depends:
      base >=4.7 && <5
    , enigma-model
    , text
  default-language: Haskell2010
