cabal-version:      2.4
name:               enigma-model
version:            0.1.0.0
author:             user7723
maintainer:         jmp.loop@kittens.org

library
  exposed-modules:
    Enigma.Constants
    Enigma.Aliases
    Enigma.Rotor
    Enigma.Reflector
    Enigma.Magazine
    Enigma.Enigma
    Enigma.Encryption
    Combinatorics.Common
    Combinatorics.PermutationTree
    Combinatorics.UPairsTree
    Options.Parse
    Options.Interpret
  build-depends:
      base ^>=4.16.3.0
    , text
    , unordered-containers
    , array
    , raw-strings-qq
  hs-source-dirs:
    lib
  default-language: Haskell2010

executable enigma
  main-is:
    Main.hs
  hs-source-dirs:
    app
  build-depends:
      base >=4.7 && <5
    , enigma-model
    , text
  default-language: Haskell2010

test-suite tests
  type:
    exitcode-stdio-1.0
  hs-source-dirs:
    tests
  default-language:
    Haskell2010
  main-is: Main.hs
  build-depends:
      base >=4.7 && <5
    , QuickCheck
    , enigma-model
    , text
