cabal-version:      2.4
name:               enigma-model
version:            0.1.0.0
author:             user7723
maintainer:         jmp.loop@kittens.org

library
  exposed-modules:
    Enigma
    Enigma.Aliases
    Enigma.Constants
    Enigma.Encryption
    Enigma.Magazine
    Enigma.Reflector
    Enigma.Rotor
    Enigma.Combinatorics.Common
    Enigma.Combinatorics.PermutationTree
    Enigma.Combinatorics.UPairsTree
    Enigma.Options.Parse
    Enigma.Options.ConfigFile
    Enigma.Options.Interact
    Enigma.Options.Interpret
  build-depends:
      base
    , array
    , raw-strings-qq
    , bytestring
    , text
    , mtl
    , optparse-applicative
    , megaparsec
    , parser-combinators
  hs-source-dirs:
    lib
  ghc-options:
    -Wall
    -O2
  default-language: Haskell2010

executable enigma
  main-is:
    Main.hs
  hs-source-dirs:
    app
  build-depends:
      base
    , enigma-model
    , bytestring
  ghc-options:
    -Wall
    -O2
  default-language: Haskell2010

test-suite tests
  type:
    exitcode-stdio-1.0
  hs-source-dirs:
    tests
  default-language:
    Haskell2010
  main-is: Main.hs
  ghc-options:
    -Wall
    -O2
  build-depends:
      base
    , QuickCheck
    , enigma-model
    , bytestring
